<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:onClick="OnSetAvatarButton"
            android:src="@drawable/ic_logo_00"
            app:srcCompat="@drawable/ic_logo_00" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="36dp" />

        <EditText
            android:id="@+id/teamNameFeild"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/teamNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name_text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="36dp" />

        <EditText
            android:id="@+id/teamAddressFeild"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/address_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/teamAddressView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/address_text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="36dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="OnOpenInGoogleMaps"
            android:text="@string/google_maps_btn_txt" />
    </LinearLayout>
</RelativeLayout>